--- a/configs/model_config.json
+++ b/configs/model_config.json
@@ -4,21 +4,33 @@
         "n_steps": 2,
         "n_convs": 2,
         "n_dense": 2,
-        "activation": "linear"
+        "activation": "linear",
+        "dropout": 0.5
     },
     "optimizer": {
         "name": "Adam",
-        "lr": 1e-4,
+        "lr": 1e-3,
         "betas": [0.9, 0.999],
         "eps": 1e-08
+    },
+    "scale": {
+        "include_bias": true,
+        "axis": null,
+        "after_axis": 0,
+        "normalize": true,
+        "weighted": false,
+        "per_label": false,
+        "multiply_by_weights": true,
+        "scale_whole": true
     },
     "out_channels": 513,
     "loss": "L1",
     "loss_kwargs": {},
-    "loss_vae_weight": 1e-4,
+    "loss_vae_weight": 1e-3,
     "checkpoint": 5,
     "dataset_config": {
-        "k": 60,
+        "k": 300,
+        "coef_k": 0.33,
         "repeat_unlabeled": 1,
         "n_workers": 4,
         "n_valid_workers": 0
